fix scrollbar

--- a/src/components/Main/Services/Services.module.scss
+++ b/src/components/Main/Services/Services.module.scss
@@ -45,5 +45,10 @@
       border-radius: 2px;
       margin: 0;
     }
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
+      background: rgba(96, 182, 255, 1);
+      border-radius: 2px;
+    }
   }
 }
